force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>