force-app/main/default/objects/Employee__c/fields/Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Id__c</fullName>
    <label>Emp Id</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>