force-app/main/default/objects/Employee__c/fields/Feedback_from_Manager__c.field-meta.xml
<CustomField>
    <fullName>Feedback_from_Manager__c</fullName>
    <label>Feedback from Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>