force-app/main/default/objects/Employee__c/fields/Project_Document_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Project_Document_Percentage__c</fullName>
    <label>Project Document Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>