force-app/main/default/objects/Employee__c/fields/Self_Review__c.field-meta.xml
<CustomField>
    <fullName>Self_Review__c</fullName>
    <label>Self Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>